--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     ],
     "require": {
         "symfony/symfony": "~2.2",
-        "sonata-project/admin-bundle": "~2.2.7",
+        "sonata-project/admin-bundle": "~2.2.7"
     },
     "require-dev": {
-        "sonata-project/doctrine-orm-admin-bundle": ">=2.2.1",
+        "sonata-project/doctrine-orm-admin-bundle": ">=2.2.1"
     },
     "suggest": {
-        "sonata-project/doctrine-orm-admin-bundle": ">=2.2.1",
+        "sonata-project/doctrine-orm-admin-bundle": ">=2.2.1"
     },
     "autoload": {
         "psr-0": { "Sonata\\MediaBundle": "" }
