--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "target-dir": "Weare/FormBuilderBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0.0-beta"
         }
     }
 }
