--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
         "sonata-project/doctrine-orm-admin-bundle": ">=2.2.1"
     },
     "autoload": {
-        "psr-0": { "Weare\\WeareFormBuilderBundle": "" }
+        "psr-0": { "Weare\\FormBuilderBundle": "" }
     },
-    "target-dir": "Weare/WeareFormBuilderBundle",
+    "target-dir": "Weare/FormBuilderBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.0-dev"
+            "dev-master": "1.0-dev"
         }
     }
 }
