--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: php
-
+ 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
-
+- 5.3
+ 
 before_script:
-  - composer install --dev --prefer-source
-
-script: phpunit
+- curl -s http://getcomposer.org/installer | php
+- php composer.phar install
